--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bucketed-scheduler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Scheduler with events listed (not to scale), grouped into bucketed drop zones",
   "main": "index.js",
   "scripts": {
@@ -36,9 +36,14 @@
     "classnames": "^2.2.5",
     "event-time-utils": "^1.0.1",
     "moment": "^2.22.1",
-    "react": "^16.3.2",
+    "react": "^15.4",
     "react-dnd": "^2.6.0",
+    "react-dom": "^15.4",
     "shallow-utils": "^1.0.1"
+  },
+  "peerDependencies": {
+    "react": "0.14.x || 15.x",
+    "react-dom": "0.14.x || 15.x"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
