--- a/demo-site/package.json
+++ b/demo-site/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "./node_modules/node-sass/bin/node-sass demos.sass dist/demos.css",
-    "watch-css": "npm run build-css; ./node_modules/node-sass/bin/node-sass demos.sass dist/demos.css --watch",
+    "build-css": "./node_modules/.bin/stylus demos.styl -o dist/demos.css",
+    "watch-css": "npm run build-css; ./node_modules/.bin/stylus demos.styl -o dist/demos.css --watch",
     "build-js": "./node_modules/webpack/bin/webpack.js",
     "watch-js": "./node_modules/webpack/bin/webpack.js --watch",
     "build": "npm run build-js; npm run build-css",
@@ -48,7 +48,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "node-sass": "^4.9.0",
+    "stylus": "^0.54.8",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   }
