--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-js": "./node_modules/webpack/bin/webpack.js",
-    "build-css": "./node_modules/node-sass/bin/node-sass src/scheduler.sass dist/react-bucketed-scheduler.css",
+    "build-css": "./node_modules/.bin/stylus src/scheduler.styl -o dist/react-bucketed-scheduler.css",
     "build": "npm run build-js; npm run build-css",
     "prepare": "npm run build"
   },
@@ -53,7 +53,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "node-sass": "^4.9.0",
+    "stylus": "^0.54.8",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.7.2"
